# rustbonsai

./: .gitignore  Cargo.toml  README.md
src/: main.rs  set_deltas.rs
src/domain/: branch_type.rs  config.rs  counters.rs  mod.rs  ncurses_objects.rs
